--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "formik": "^2.2.9",
+    "jose": "^4.14.4",
+    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken-esm": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
