--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "axios-mock-adapter": "^1.21.4",
     "formik": "^2.2.9",
     "jose": "^4.14.4",
-    "jsonwebtoken": "^9.0.0",
-    "jsonwebtoken-esm": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.11.1",
     "shortid": "^2.2.16",
+    "usehooks-ts": "^2.9.1",
     "yup": "^1.1.1"
   },
   "devDependencies": {
