--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/nunito": "^4.5.12",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.3",
+    "@mui/x-date-pickers": "^6.5.0",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "jose": "^4.14.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-imask": "^6.6.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.11.1",
     "shortid": "^2.2.16",
