Страница с заявками кандидатов

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.12.3",
     "@mui/x-date-pickers": "^6.5.0",
+    "@types/ramda": "^0.29.2",
     "axios": "^1.4.0",
     "axios-mock-adapter": "^1.21.4",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "jose": "^4.14.4",
+    "ramda": "^0.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-imask": "^6.6.1",
