--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ramda": "^0.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-imask": "^6.6.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.11.1",
